# lxmf-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  UPSTREAM.md  design.md  plan.md
.github/workflows/: ci.yml
docs/: lxmf-server-operator-runbook.md  upstream-lxmf-backlog.md
lxmd/: Cargo.toml  README.md
lxmd/src/: main.rs
lxmf/: Cargo.toml
lxmf-core/: Cargo.toml
lxmf-core/src/: announce.rs  constants.rs  lib.rs  message.rs  stamp.rs
lxmf-core/tests/: interop.rs
lxmf-server/: Cargo.toml
lxmf-server/src/: main.rs
lxmf/examples/: echo.rs  live_test.rs  rnode_echo.rs  send_message.rs  test_node.rs  tui.rs
lxmf/src/: handlers.rs  lib.rs  peer.rs  propagation.rs  router.rs  stamper.rs  storage.rs  tickets.rs
lxmf/tests/: e2e.rs  handler_ticket_tests.rs  peer_tests.rs  propagation_tests.rs  router_tests.rs  stamper_tests.rs
scripts/: lint-host.sh  lxmf_vps_report.py
tests/: generate_vectors.py
tests/docker/: Dockerfile  README.md  run-all.sh  run.sh
tests/docker/lib/: build.sh  helpers.sh  readiness.sh  summary.sh  topology.sh
tests/docker/lxmf-server/: run.sh  suite.sh
tests/docker/suites/: 01_health.sh  02_discovery.sh  03_opportunistic_delivery.sh  04_direct_delivery.sh  05_bidirectional.sh  06_multihop.sh  07_restart_persistence.sh  08_propagation_node.sh  09_propagated_send.sh  10_scale.sh
tests/docker/topologies/: chain.sh  mesh.sh  star.sh
tests/fixtures/: announce_vectors.json  message_vectors.json  msgpack_vectors.json  peer_vectors.json  stamp_vectors.json  storage_vectors.json  ticket_vectors.json
