[workspace]
members = ["lxmf-core", "lxmf", "lxmd", "lxmf-server"]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/lelloman/lxmf-rs"
authors = ["lxmf-rs contributors"]

[workspace.dependencies]
rns-crypto = { version = "=0.1.6", default-features = false }
rns-core = { version = "=0.1.11", default-features = false }
rns-net = "=0.5.8"
lxmf-core = { version = "0.1.5", path = "lxmf-core" }
lxmf-rs = { version = "0.1.5", path = "lxmf" }
log = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Compile crypto crate with optimizations even in debug/test builds.
[profile.dev.package.rns-crypto]
opt-level = 2

[profile.test.package.rns-crypto]
opt-level = 2
