[package]
name = "lxmd"
description = "LXMF propagation daemon"
version.workspace = true
edition.workspace = true

[dependencies]
lxmf.workspace = true
lxmf-core.workspace = true
rns-net.workspace = true
rns-core = { workspace = true, features = ["std"] }
rns-crypto = { workspace = true, features = ["std"] }
log.workspace = true
env_logger = "0.11"
