[package]
name = "lxmd"
description = "LXMF propagation daemon"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["init-logger"]
init-logger = ["dep:env_logger"]
android-logger = ["dep:android_logger"]

[dependencies]
lxmf-rs.workspace = true
lxmf-core.workspace = true
rns-net.workspace = true
rns-core = { workspace = true, features = ["std"] }
rns-crypto = { workspace = true, features = ["std"] }
log.workspace = true
env_logger = { version = "0.11", optional = true }
unicode-general-category = "1.1"
unicode-normalization = "0.1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.15", optional = true }
