[package]
name = "lxmf-server"
description = "LXMF daemon supervisor and control server"
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
log.workspace = true
serde.workspace = true
serde_json.workspace = true
env_logger = "0.11"
libc = "0.2"

